--- a/AntonStockApp/res/layout/fragment_add_product_mp.xml
+++ b/AntonStockApp/res/layout/fragment_add_product_mp.xml
@@ -20,7 +20,7 @@
             android:text="@string/lbl_prod_tipo_material"
             android:layout_marginLeft="15dp"            
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20sp" />
+            android:textSize="@dimen/prod_text_size" />
 
         <Spinner
             android:id="@+id/tmaterial"
@@ -35,14 +35,14 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"            
             android:layout_gravity="center_vertical"
             android:text="@string/lbl_prod_color"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20sp" />
+            android:textSize="@dimen/prod_text_size" />
 
          <Spinner
             android:id="@+id/color"
@@ -52,19 +52,19 @@
 
     </TableRow>    
     <TableRow
-        android:id="@+id/tableRow2"
+        android:id="@+id/tableRow21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"            
             android:layout_gravity="center_vertical"
             android:text="@string/lbl_prod_acabado"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20sp" />
+            android:textSize="@dimen/prod_text_size" />
 
          <Spinner
             android:id="@+id/terminacion"
