--- a/AntonStockApp/res/menu/common.xml
+++ b/AntonStockApp/res/menu/common.xml
@@ -8,6 +8,12 @@
         android:onClick="userInfo"
         android:showAsAction="always"/>
     <item
+        android:id="@+id/action_sync"
+        android:title="@string/action_user_info"
+        android:icon="@drawable/ic_menu_sync"
+        android:onClick="dataSync"
+        android:showAsAction="always"/>
+    <item
         android:id="@+id/action_exit"
         android:title="@string/action_exit"
         android:icon="@drawable/ic_menu_exit"
