--- a/AntonStockApp/res/values-sw720dp/dimens.xml
+++ b/AntonStockApp/res/values-sw720dp/dimens.xml
@@ -27,7 +27,9 @@
     <dimen name="prod_list_image_w">150dp</dimen>
 	<dimen name="prod_list_image_h">150dp</dimen>   
 	<dimen name="prod_text_size">25sp</dimen>
-	<dimen name="prod_name_text_size">30sp</dimen>   
+	<dimen name="prod_name_text_size">30sp</dimen> 
+	<dimen name="prod_input_height">50sp</dimen>   
+	
 	<dimen name="button_h">50dp</dimen>  
 	<dimen name="button_text_size">15sp</dimen>  
 	
@@ -49,7 +51,7 @@
 	<dimen name="oe_margin_sep">10dp</dimen>  			
 	<dimen name="oe_row_height">40dp</dimen>  	
 	<dimen name="oe_input_height">50dp</dimen>  	
-	<dimen name="oe_input_width">190dp</dimen>  	
+	<dimen name="oe_input_width">260dp</dimen>  	
 		
 	<dimen name="popup_input_height">50dp</dimen>  	
 
